# race_log

./: .gitignore  CLAUDE.md  README.md  app.py  makefile  pyproject.toml  requirements.txt
app/: app.py
config/: colors.json  map_style.json  regions.json
data/: SURFACE_GUIDE.md
data/raw/: completed_races.csv  possible_races.csv  possible_races.xlsx
data/results/2008/06_13__high_trek_adventure__new_york_ny/: metadata.json  results.html
data/results/2008/11_27__manchester_road_race__manchester_ct/: metadata.json
data/results/2009/07_11__portsmouth_harbor_5k_road_race__portsmouth_nh/: metadata.json  results.html
data/results/2009/11_07__ebac_fall_challenge__new_london_ct/: metadata.json  results.html
data/results/2010/07_10__portsmouth_harbor_5k_road_race__portsmouth_nh/: metadata.json  results.html
data/results/2010/10_09__hopebuilders_5k__charlotte_nc/: metadata.json  results.html
data/results/2010/10_30__nodaween_freaky_5k__charlotte_nc/: metadata.json  results.html
data/results/2010/11_25__gmaa_turkey_trot__burlington_vt/: metadata.json
data/results/2011/05_14__5k_run_for_clean_air__charlotte_nc/: metadata.json  results.html
data/results/2011/07_09__portsmouth_harbor_5k_road_race__portsmouth_nh/: metadata.json  results.html
data/results/2011/08_28__warrior_dash__huntersville_nc/: metadata.json  results.html
data/results/2011/10_29__zombie_run_challenge__charlotte_nc/: metadata.json
data/results/2011/11_24__charlotte_southpark_turkey_trot__charlotte_nc/: metadata.json  results.html
data/results/2012/03_15__charlotte_runners_beer_mile__charlotte_nc/: metadata.json
data/results/2012/05_05__clemson_downs_4k__clemson_sc/: metadata.json  results.html
data/results/2012/05_19__westminster_foothills_5K__westminster_sc/: metadata.json  results.html  results.txt
data/results/2012/05_26__seneca_fest_5k__seneca_sc/: metadata.json  results.html  results.txt
data/results/2012/09_22__isabellla_santos_foundation__charlotte_nc/: activity.gpx  metadata.json  results.html
data/results/2012/10_20__zombie_run_challenge__charlotte_nc/: activity.gpx  metadata.json
data/results/2012/10_27__nodaween_freaky_5k__charlotte_nc/: activity.gpx  metadata.json  results.html
data/results/2013/04_06__american_two_mile_road_race__cornelius_nc/: activity.gpx  metadata.json  results.html
data/results/2013/06_07__noda_5k__charlotte_nc/: activity.gpx  metadata.json  results.html
data/results/2013/06_15__brew_dash_6K__charlotte_nc/: activity.gpx  metadata.json
data/results/2013/09_01__labor_day_trail_race__charlote_nc/: activity.gpx  metadata.json
pages/: 01_history.py  02_future.py  02_potential.py
scripts/: generate_metadata.py
src/: data_loader.py  debug_json.py  pace.py  paths.py  plotting.py  ui_utils.py
(+248 files in other folders)
