[project]
name = "race_log"
version = "1.0.0"
description = "Comprehensive visualization, history tracking, and performance analysis engine for trail and road races."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Evan Canfield" }
]

dependencies = [
    "streamlit>=1.42.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "folium>=0.17.0",
    "streamlit_folium>=0.21.0",
    "openpyxl==3.1.5",
    "gpxpy==1.6.2",
    "plotly==6.6.0",
    "python-dotenv==1.2.2"
]

[project.optional-dependencies]
dev = [
    "ruff",      # Linting
    "black",     # Formatting
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
extend-select = ["I"]
fix = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.uv]
package = true
